[gd_scene load_steps=4 format=2]

[ext_resource path="res://modules/menu/scripts/MenuMain.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ui/Battlegirls.svg" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MenuMain" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -88.0
margin_right = 150.0
margin_bottom = 88.0

[node name="TextureRect" type="TextureRect" parent="UI/VBoxContainer"]
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="ButtonStart" type="Button" parent="UI/VBoxContainer"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 98.0
focus_neighbour_top = NodePath("../ButtonExit")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Start"
flat = true

[node name="ButtonSelect" type="Button" parent="UI/VBoxContainer"]
margin_top = 102.0
margin_right = 300.0
margin_bottom = 122.0
text = "Stage Select"
flat = true

[node name="ButtonOptions" type="Button" parent="UI/VBoxContainer"]
margin_top = 126.0
margin_right = 300.0
margin_bottom = 146.0
text = "Options"
flat = true

[node name="ButtonExit" type="Button" parent="UI/VBoxContainer"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 170.0
focus_neighbour_bottom = NodePath("../ButtonStart")
text = "Exit"
flat = true

[connection signal="pressed" from="UI/VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ButtonSelect" to="." method="_on_ButtonSelect_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
